# qgroundcontrol-herelink

android/src/org/mavlink/qgroundcontrol/: QGCActivity.java
src/: QGCApplication.cc  QGCApplication.h  main.cc
src/FlightDisplay/: VideoManager.cc  VideoManager.h
src/Settings/: Video.SettingsGroup.json  VideoSettings.cc  VideoSettings.h
src/Vehicle/: Vehicle.cc
src/VideoStreaming/: CMakeLists.txt  README.md  VideoReceiver.cc  VideoReceiver.h  VideoStreaming.pri
